--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,25 @@
 .App {
   text-align: center;
   font-size: calc(16px + 2vmin);
+  font-family: 'Loved by the King', cursive;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+.header {
+  font-family: 'Metamorphous', cursive;
+  font-size: calc(42px + 1.5vmin);
+ 
   
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.main {
+
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App .footer {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  font-size: calc(5px + 1.75vmin);
 }
