--- a/src/App.css
+++ b/src/App.css
@@ -16,10 +16,9 @@
   
 }
 
-.App .footer {
+.footer {
   position: absolute;
   left: 0;
   right: 0;
-  bottom: 0;
   font-size: calc(5px + 1.75vmin);
 }
